--- a/index.html
+++ b/index.html
@@ -49,90 +49,95 @@
 <body>
 
     <header>
-        <div class="bg-dark navbar navbar-dark bg-dark shadow-sm" id="navbarHeader">
+        <div class="collapse bg-dark" id="navbarHeader">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-7 py-4">
-                        <h3 class="text-white">Wat is dit nu net?</h3>
-                        <p class="text-white">Dit is een begeleidende website die dient om meer informatie te verschaffen over vragen die moeilijker zijn of waarover
-                            je graag meer informatie wenst. Hier staan ook soms foto's bij zodat je hier visueel iets van kunt voorstellen. Voel jezelf niet schuldig als
-                            je hier bepaalde zaken moet komen opzoeken of als je deze site eerst even helemaal wil doorlezen! Wanneer iets toch nog niet helemaal duidelijk is,
-                            kan u hiernaast klikken op "Stuur me een mailtje". Ik beantwoord en verduidelijk met plezier alle vragen! Veel succes met het invullen van
-                            de vragenlijst!</p>
+                        <h4 class="text-white">Wat is dit nu net?</h4>
+                        <p class="text-white">Dit is een begeleidende website die dient om meer informatie te verschaffen over vragen die moeilijker zijn of waarover je graag meer informatie wenst. Hier staan ook soms foto's bij zodat je hier visueel iets van kunt voorstellen. Voel jezelf niet schuldig als je hier bepaalde zaken moet komen opzoeken of als je deze site eerst even helemaal wil doorlezen! Wanneer iets toch nog niet helemaal duidelijk is, kan u hiernaast klikken op "Stuur me een mailtje". Ik beantwoord en verduidelijk met plezier alle vragen! Veel succes met het invullen van de vragenlijst!</p>
                     </div>
                     <div class="col-sm-4 offset-md-1 py-4">
-                        <h3 class="text-white">Contact</h3>
+                        <h4 class="text-white">Contact</h4>
                         <ul class="list-unstyled">
-                            <li><a href="mailto:r0613973@student.thomasmore.be" class="text-white">Stuur me een mailtje</a></li>
+                            <li><a href="mailto:r0613973@student.thomasmore.be" class="text-white">Email me</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="navbar navbar-dark bg-dark box-shadow">
+            <div class="container d-flex justify-content-between">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="text-white">Klik op mij voor meer info!</span>
+                </button>
+            </div>
+        </div>
     </header>
 
     <main role="main">
-        <div class="jumbotron">
-            <h1 class="display-4">Hello, world!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-            <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </div>
+        <section class="jumbotron text-center">
+            <div class="container">
+                <h1 class="jumbotron-heading">Welkom!</h1>
+                <p class="lead text-muted">Op deze website kun je meer informatie vinden over de vragenlijst die u invult met betrekking tot de meldkamer. Hieronder ziet u heel
+                    wat links waar u op kunt klikken. Deze hebben meestal ook de naam van de vraag zoals deze in de enquête staat. Wanneer u hier op klikt, zal u tekst, foto's,...
+                    vinden die de vraag hopelijk meer verduidelijken. Als test kun je hieronder bv. eens een keer klikken op "Klik hier voor een test!".</p>
+            </div>
+        </section>
 
         <div id="accordion">
-            <div class="card">
-                <div class="card-header" id="headingOne">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Collapsible Group Item #1
-                        </button>
-                    </h5>
-                </div>
+            <div class="container">
+                <div class="card">
+                    <div class="card-header" id="heading1">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#test" aria-expanded="true" aria-controls="test">
+                                Klik hier voor een test!
+                            </button>
+                        </h5>
+                    </div>
 
-                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <div id="test" class="collapse" aria-labelledby="heading1" data-parent="#accordion">
+                        <div class="card-body">
+                            Super! Dit is de manier waarop je ook de rest van de kaartjes kunt openen!
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingTwo">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Collapsible Group Item #2
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Collapsible Group Item #2
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                        <div class="card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingThree">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Collapsible Group Item #3
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Collapsible Group Item #3
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                        <div class="card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <footer class="text-muted py-5">
+    <footer class="text-white bg-dark py-5 mt-5">
         <div class="container">
             <p class="float-end mb-1">
-                <a href="#">Back to top</a>
+                <a href="#">Terug naar boven!</a>
             </p>
-            <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-            <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/docs/5.0/getting-started/introduction/">getting started guide</a>.</p>
+            <p class="mb-1">Heb je nog vragen tijdens het invullen van de vragenlijst? Aarzel dan niet om mij een mailtje te sturen door <a href="mailto:r0613973@student.thomasmore.be">hier</a> te klikken!</p>
         </div>
 
     </footer>
@@ -145,3 +150,4 @@
 </body>
 
 </html>
+
