--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="collapse bg-dark" id="navbarHeader">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-8 col-md-7 py-4">
+                    <div class="col-sm-8 col-md-7 py-4 ">
                         <h4 class="text-white">Wat is dit nu net?</h4>
                         <p class="text-white">Dit is een begeleidende website die dient om meer informatie te verschaffen over vragen die moeilijker zijn of waarover je graag meer informatie wenst. Hier staan ook soms foto's bij zodat je hier visueel iets van kunt voorstellen. Voel jezelf niet schuldig als je hier bepaalde zaken moet komen opzoeken of als je deze site eerst even helemaal wil doorlezen! Wanneer iets toch nog niet helemaal duidelijk is, kan u hiernaast klikken op "Stuur me een mailtje". Ik beantwoord en verduidelijk met plezier alle vragen! Veel succes met het invullen van de vragenlijst!</p>
                     </div>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="navbar navbar-dark bg-dark box-shadow">
-            <div class="container d-flex justify-content-between">
+            <div class="container d-flex justify-content-between mt-3 mb-3">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="text-white">Klik op mij voor meer info!</span>
                 </button>
@@ -140,8 +140,8 @@
             </p>
             <p class="mb-1">Heb je nog vragen tijdens het invullen van de vragenlijst? Aarzel dan niet om mij een mailtje te sturen door <a href="mailto:r0613973@student.thomasmore.be">hier</a> te klikken!</p>
         </div>
-
     </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -150,4 +150,3 @@
 </body>
 
 </html>
-
