--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Contact</h4>
                         <ul class="list-unstyled">
-                            <li><a href="mailto:r0613973@student.thomasmore.be" class="text-white">Email me</a></li>
+                            <li><a href="mailto:r0613973@student.thomasmore.be" class="text-white">Stuur me een mailtje</a></li>
                         </ul>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
         <section class="jumbotron text-center">
             <div class="container">
                 <h1 class="jumbotron-heading">Welkom!</h1>
-                <p class="lead text-muted">Op deze website kun je meer informatie vinden over de vragenlijst die u invult met betrekking tot de meldkamer. Hieronder ziet u heel
+                <p class="lead">Op deze website kun je meer informatie vinden over de vragenlijst die u invult met betrekking tot de meldkamer. Hieronder ziet u heel
                     wat links waar u op kunt klikken. Deze hebben meestal ook de naam van de vraag zoals deze in de enquête staat. Wanneer u hier op klikt, zal u tekst, foto's,...
                     vinden die de vraag hopelijk meer verduidelijken. Als test kun je hieronder bv. eens een keer klikken op "Klik hier voor een test!".</p>
             </div>
