--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <style>
         .background {
-            background-image: url(background.png);
+            background-image: url('background.png');
             background-size: cover;
         }
 
