--- a/index.html
+++ b/index.html
@@ -178,6 +178,28 @@
                         <div class="card-body">
                             <p>Je kan de verschillende schermen verplaatsen, over elkaar plaatsen, van grootte veranderen,… Zo kan je bv. kiezen een webbrowser op je scherm te slepen, daarnaast surveillance camera's te plaatsen, hieronder een opzoeksysteem waar je bv. nummerplaten kunt opzoeken, enz. Dit zou er zo kunnen uitzien:</p>
                             <img src="vraag3a.jpg" height="50%" width="50%">
+                            <p class="mt-2">Hier ook nog een kort demo filmpje:</p>
+                            <video width="75%" height="75%" controls>
+                                <source src="freestyle_fino-peq.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading4">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag4" aria-expanded="false" aria-controls="vraag4">
+                                Vraag 4: Wat vind u van het principe van een smart mouse?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag4" class="collapse" aria-labelledby="heading4" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Via de smart mouse kan je van het ene scherm naar het andere gaan met de muis zonder bv. nog te klikken in het scherm. Als je in dit scherm terecht komt, is je muis automatisch geactiveerd! Dit hoef je ook maar slechts eenmaal te activeren en dan blijft deze optie aangevinkt staan. Pas op, dit is geen type muis, maar een optie die aangepast kan worden binnen het programma! Het grote voordeel hiervan is dat er veel sneller en efficiënter kan gewerkt worden. Als je snel van het ene naar het andere scherm wil gaan, hoef je via smart mouse niet meer naar een ander toetsenbord te stappen of nog extra te klikken in dat scherm om de muis te activeren. Hieronder een video die een korte demo geeft van de smart mouse:</p>
+                            <video width="75%" height="75%" controls>
+                                <source src="smart_mouse_fino-peq.mp4" type="video/mp4">
+                            </video>
                         </div>
                     </div>
                 </div>
