--- a/index.html
+++ b/index.html
@@ -203,6 +203,24 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading5">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag5" aria-expanded="false" aria-controls="vraag5">
+                                Vraag 5: Vind u het belangrijk dat u het geluid of andere opties kan aanpassen per scherm?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag5" class="collapse" aria-labelledby="heading5" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Er bestaat de mogelijkheid om op een snelle manier bepaalde zaken per scherm aan te passen. Bijvoorbeeld het maximaliseren of het sluiten van het scherm. Sommige schermen kunnen ook als bedoeling hebben om het geluid te verhogen of verlagen met een klik van de muis. Binnen de technologie van het bedrijf Gesab, noemt dit "Hot Corners". Hieronder een demo van hoe dit er eventueel zou kunnen uitzien: </p>
+                            <video width="75%" height="75%" controls>
+                                <source src="hot_corners_fino-peq.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
