--- a/index.html
+++ b/index.html
@@ -221,6 +221,24 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading6">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag6" aria-expanded="false" aria-controls="vraag6">
+                                Vraag 6: Ik vind soms mijn muis niet meer terug op scherm en heb hier graag een hulpmiddel voor!
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag6" class="collapse" aria-labelledby="heading6" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is in eerste instantie misschien een gekke stelling/vraaag. Toch is dit niet zo'n gekke vraag. In sommige gevallen staat er zo'n grote hoeveelheid informatie op het scherm, dat je de bomen door het bos niet meer ziet. Ook kan je muis verstopt zijn op een witte achtergrond waardoor je deze niet meer ziet. Ook moet je als operator snel beslissingen kunnen maken en zaken opzoeken. Wanneer je dan de muis kwijt bent op het scherm, is dit niet ideaal. Er bestaat technologie om je muis terug op te sporen op je scherm. Door bv. tweemaal op de "Ctrl" toets te duwen, wordt deze terug weergegeven op het scherm. Hieronder een video om dit te verduidelijken: </p>
+                            <video width="75%" height="75%" controls>
+                                <source src="mouse_finder.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
