--- a/index.html
+++ b/index.html
@@ -178,9 +178,17 @@
                         <div class="card-body">
                             <p>Je kan de verschillende schermen verplaatsen, over elkaar plaatsen, van grootte veranderen,… Zo kan je bv. kiezen een webbrowser op je scherm te slepen, daarnaast surveillance camera's te plaatsen, hieronder een opzoeksysteem waar je bv. nummerplaten kunt opzoeken, enz. Dit zou er zo kunnen uitzien:</p>
                             <img src="vraag3a.jpg" height="50%" width="50%">
-                            <p class="mt-2">Hier ook nog een kort demo filmpje:</p>
+                            <p class="mt-2">Hier ook nog een kort demo filmpje van hoe je de schermen zou kunnen indelen:</p>
                             <video width="75%" height="75%" controls>
                                 <source src="freestyle_fino-peq.mp4" type="video/mp4">
+                            </video>
+                            <p class="mt-2">Je kan ook heel snel bepaalde schermen naar voren brengen of meer naar de achtergrond brengen. Dit zou kunnen door gewoon op de bovenste balk te drukken van het scherm. Hieronder staat een korte demo ter beschikking van hoe dit net werkt: </p>
+                            <video width="75%" height="75%" controls>
+                                <source src="popup_fino-peq.mp4" type="video/mp4">
+                            </video>
+                            <p>Ten slotte kan je ook je schermen groter of kleiner maken door de randen vast te pakken en te slepen. De inhoud die op deze schermen staat, zullen in veel gevallen dan ook mee veranderen naargelang de grootte. Hieronder een korte demo: </p>
+                            <video width="75%" height="75%" controls>
+                                <source src="aanpasbaar_scherm.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -214,9 +222,12 @@
                     </div>
                     <div id="vraag5" class="collapse" aria-labelledby="heading5" data-parent="#accordion">
                         <div class="card-body">
-                            <p>Er bestaat de mogelijkheid om op een snelle manier bepaalde zaken per scherm aan te passen. Bijvoorbeeld het maximaliseren of het sluiten van het scherm. Sommige schermen kunnen ook als bedoeling hebben om het geluid te verhogen of verlagen met een klik van de muis. Binnen de technologie van het bedrijf Gesab, noemt dit "Hot Corners". Hieronder een demo van hoe dit er eventueel zou kunnen uitzien: </p>
+                            <p>Er bestaat de mogelijkheid om op een snelle manier bepaalde zaken per scherm aan te passen. Bijvoorbeeld het maximaliseren of het sluiten van het scherm. Sommige schermen kunnen ook als bedoeling hebben om het geluid te verhogen of verlagen met een klik van de muis. Binnen de technologie van het bedrijf Gesab, noemt dit "Hot Corners". Hieronder 2 demo's van hoe dit er eventueel zou kunnen uitzien: </p>
                             <video width="75%" height="75%" controls>
                                 <source src="hot_corners_fino-peq.mp4" type="video/mp4">
+                            </video>
+                            <video width="75%" height="75%" controls>
+                                <source src="window_options.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -235,6 +246,24 @@
                             <p>Dit is in eerste instantie misschien een gekke stelling/vraaag. Toch is dit niet zo'n gekke vraag. In sommige gevallen staat er zo'n grote hoeveelheid informatie op het scherm, dat je de bomen door het bos niet meer ziet. Ook kan je muis verstopt zijn op een witte achtergrond waardoor je deze niet meer ziet. Ook moet je als operator snel beslissingen kunnen maken en zaken opzoeken. Wanneer je dan de muis kwijt bent op het scherm, is dit niet ideaal. Er bestaat technologie om je muis terug op te sporen op je scherm. Door bv. tweemaal op de "Ctrl" toets te duwen, wordt deze terug weergegeven op het scherm. Hieronder een video om dit te verduidelijken: </p>
                             <video width="75%" height="75%" controls>
                                 <source src="mouse_finder.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading7">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag7" aria-expanded="false" aria-controls="vraag7">
+                                Vraag 7: Hoe nuttig vind u de optie om uw scherm te kunnen delen met iemand anders?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag7" class="collapse" aria-labelledby="heading7" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Hiermee bedoelen we natuurlijk niet het fysiek verplaatsen van schermen en computers of dat er verschillende mensen achter 1 scherm zitten. Met het delen van een scherm wordt bedoeld dat iemand op een knop drukt en jij dan ook de inhoud van die persoon zijn/haar scherm kunt bekijken op je eigen scherm. Er wordt dus met andere woorden een kopie van de andere persoon zijn/haar scherm naar dat van jou gestuurd. Wanneer die andere persoon ergens een handeling uitvoert op die pc, kun jij dat ook live meevolgen. Dit kan bv. gedaan worden wanneer een andere persoon vastzit met een bepaald probleem. Zo kun je dus op een snelle manier meekijken zonder van je stoel te gaan. Ook administrators kunnen zo makkelijk meekijken als er problemen zijn. Deze zouden dan ook de controle van het scherm kunnen overnemen, zodat de andere persoon met zijn/haar muis en toetsenbord jou scherm bediend. Dit zou er zo kunnen uitzien: </p>
+                            <video width="75%" height="75%" controls>
+                                <source src="scherm_delen.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
