--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
                             <video width="75%" height="75%" controls>
                                 <source src="scherm_delen.mp4" type="video/mp4">
                             </video>
+                            <p class="mt-2">Wanneer er toch iemand je scherm zou willen overnemen, krijg je daar ook telkens een melding of een pop-up van. Geen paniek dus dat er plots mensen komen spioneren op wat er allemaal op het scherm gebeurd. Je zal dus altijd die melding krijgen! Dat zou er zo kunnen uitzien: </p>
+                            <video width="75%" height="75%" controls>
+                                <source src="melding_remote.mp4" type="video/mp4">
+                            </video>
                         </div>
                     </div>
                 </div>
