--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
 
-
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -26,22 +26,6 @@
     <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
     <meta name="theme-color" content="#7952b3">
 
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
 
 
 </head>
@@ -73,21 +57,6 @@
             </div>
         </div>
     </header>
-
-    <style>
-        .background {
-            background-image: url('background.png');
-            background-size: cover;
-        }
-
-        .welkom {
-            background-color: rgb(0,0,0);
-            border: 3px solid #f1f1f1;
-            background-color: rgba(0,0,0, 0.4);
-            color: white;
-            font-weight: bold;
-        }
-    </style>
 
     <main role="main">
         <section class="jumbotron text-center background">
@@ -129,11 +98,11 @@
                     <div id="vraag1" class="collapse" aria-labelledby="heading1" data-parent="#accordion">
                         <div class="card-body">
                             <p>1 scherm:</p>
-                            <img src="vraag1a.jpg" width="25%" height="25%">
+                            <img src="images/vraag1a.jpg" width="25%" height="25%">
                             <p>2 schermen:</p>
-                            <img src="vraag1b.jpg" width="25%" height="25%">
+                            <img src="images/vraag1b.jpg" width="25%" height="25%">
                             <p>3 schermen:</p>
-                            <img src="vraag1c.jpg" width="25%" height="25%">
+                            <img src="images/vraag1c.jpg" width="25%" height="25%">
                             <p>Het voordeel van 1 groot scherm, is dat er sneller gewerkt kan worden via een clean desk principe. Er wordt dan nog maar gebruik gemaakt van slechts
                                 1 scherm, 1 toetsenbord en 1 muis! Omwille van bepaalde redenen kan u er toch voor kiezen om met meerdere schermen te werken.</p>
                         </div>
@@ -155,7 +124,7 @@
                                 Meer informatie op deze <a href="https://gesab.com/en/kvm-deskwall/">website</a>.
                                 Dit is een voorbeeld van hoe een persoonlijke videowall eruit zou kunnen zien:
                             </p>
-                            <img src="vraag2a.jpg" width="75%" height="75%">
+                            <img src="images/vraag2a.jpg" width="75%" height="75%">
                             <p>
                                 Hieronder ook nog een YouTube video over Gesab VideoWall waardoor je een beter zicht kan krijgen over deze technologie:
                             </p>
@@ -177,18 +146,18 @@
                     <div id="vraag3" class="collapse" aria-labelledby="heading3" data-parent="#accordion">
                         <div class="card-body">
                             <p>Je kan de verschillende schermen verplaatsen, over elkaar plaatsen, van grootte veranderen,… Zo kan je bv. kiezen een webbrowser op je scherm te slepen, daarnaast surveillance camera's te plaatsen, hieronder een opzoeksysteem waar je bv. nummerplaten kunt opzoeken, enz. Dit zou er zo kunnen uitzien:</p>
-                            <img src="vraag3a.jpg" height="50%" width="50%">
+                            <img src="images/vraag3a.jpg" height="50%" width="50%">
                             <p class="mt-2">Hier ook nog een kort demo filmpje van hoe je de schermen zou kunnen indelen:</p>
                             <video width="75%" height="75%" controls>
-                                <source src="freestyle_fino-peq.mp4" type="video/mp4">
+                                <source src="videos/freestyle_fino-peq.mp4" type="video/mp4">
                             </video>
                             <p class="mt-2">Je kan ook heel snel bepaalde schermen naar voren brengen of meer naar de achtergrond brengen. Dit zou kunnen door gewoon op de bovenste balk te drukken van het scherm. Hieronder staat een korte demo ter beschikking van hoe dit net werkt: </p>
                             <video width="75%" height="75%" controls>
-                                <source src="popup_fino-peq.mp4" type="video/mp4">
+                                <source src="videos/popup_fino-peq.mp4" type="video/mp4">
                             </video>
                             <p>Ten slotte kan je ook je schermen groter of kleiner maken door de randen vast te pakken en te slepen. De inhoud die op deze schermen staat, zullen in veel gevallen dan ook mee veranderen naargelang de grootte. Hieronder een korte demo: </p>
                             <video width="75%" height="75%" controls>
-                                <source src="aanpasbaar_scherm.mp4" type="video/mp4">
+                                <source src="videos/aanpasbaar_scherm.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -206,7 +175,7 @@
                         <div class="card-body">
                             <p>Via de smart mouse kan je van het ene scherm naar het andere gaan met de muis zonder bv. nog te klikken in het scherm. Als je in dit scherm terecht komt, is je muis automatisch geactiveerd! Dit hoef je ook maar slechts eenmaal te activeren en dan blijft deze optie aangevinkt staan. Pas op, dit is geen type muis, maar een optie die aangepast kan worden binnen het programma! Het grote voordeel hiervan is dat er veel sneller en efficiënter kan gewerkt worden. Als je snel van het ene naar het andere scherm wil gaan, hoef je via smart mouse niet meer naar een ander toetsenbord te stappen of nog extra te klikken in dat scherm om de muis te activeren. Hieronder een video die een korte demo geeft van de smart mouse:</p>
                             <video width="75%" height="75%" controls>
-                                <source src="smart_mouse_fino-peq.mp4" type="video/mp4">
+                                <source src="videos/smart_mouse_fino-peq.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -224,10 +193,10 @@
                         <div class="card-body">
                             <p>Er bestaat de mogelijkheid om op een snelle manier bepaalde zaken per scherm aan te passen. Bijvoorbeeld het maximaliseren of het sluiten van het scherm. Sommige schermen kunnen ook als bedoeling hebben om het geluid te verhogen of verlagen met een klik van de muis. Binnen de technologie van het bedrijf Gesab, noemt dit "Hot Corners". Hieronder 2 demo's van hoe dit er eventueel zou kunnen uitzien: </p>
                             <video width="75%" height="75%" controls>
-                                <source src="hot_corners_fino-peq.mp4" type="video/mp4">
+                                <source src="videos/hot_corners_fino-peq.mp4" type="video/mp4">
                             </video>
                             <video width="75%" height="75%" controls>
-                                <source src="window_options.mp4" type="video/mp4">
+                                <source src="videos/window_options.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -245,7 +214,7 @@
                         <div class="card-body">
                             <p>Dit is in eerste instantie misschien een gekke stelling/vraaag. Toch is dit niet zo'n gekke vraag. In sommige gevallen staat er zo'n grote hoeveelheid informatie op het scherm, dat je de bomen door het bos niet meer ziet. Ook kan je muis verstopt zijn op een witte achtergrond waardoor je deze niet meer ziet. Ook moet je als operator snel beslissingen kunnen maken en zaken opzoeken. Wanneer je dan de muis kwijt bent op het scherm, is dit niet ideaal. Er bestaat technologie om je muis terug op te sporen op je scherm. Door bv. tweemaal op de "Ctrl" toets te duwen, wordt deze terug weergegeven op het scherm. Hieronder een video om dit te verduidelijken: </p>
                             <video width="75%" height="75%" controls>
-                                <source src="mouse_finder.mp4" type="video/mp4">
+                                <source src="videos/mouse_finder.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -263,11 +232,29 @@
                         <div class="card-body">
                             <p>Hiermee bedoelen we natuurlijk niet het fysiek verplaatsen van schermen en computers of dat er verschillende mensen achter 1 scherm zitten. Met het delen van een scherm wordt bedoeld dat iemand op een knop drukt en jij dan ook de inhoud van die persoon zijn/haar scherm kunt bekijken op je eigen scherm. Er wordt dus met andere woorden een kopie van de andere persoon zijn/haar scherm naar dat van jou gestuurd. Wanneer die andere persoon ergens een handeling uitvoert op die pc, kun jij dat ook live meevolgen. Dit kan bv. gedaan worden wanneer een andere persoon vastzit met een bepaald probleem. Zo kun je dus op een snelle manier meekijken zonder van je stoel te gaan. Ook administrators kunnen zo makkelijk meekijken als er problemen zijn. Deze zouden dan ook de controle van het scherm kunnen overnemen, zodat de andere persoon met zijn/haar muis en toetsenbord jou scherm bediend. Dit zou er zo kunnen uitzien: </p>
                             <video width="75%" height="75%" controls>
-                                <source src="scherm_delen.mp4" type="video/mp4">
+                                <source src="videos/scherm_delen.mp4" type="video/mp4">
                             </video>
                             <p class="mt-2">Wanneer er toch iemand je scherm zou willen overnemen, krijg je daar ook telkens een melding of een pop-up van. Geen paniek dus dat er plots mensen komen spioneren op wat er allemaal op het scherm gebeurd. Je zal dus altijd die melding krijgen! Dat zou er zo kunnen uitzien: </p>
                             <video width="75%" height="75%" controls>
-                                <source src="melding_remote.mp4" type="video/mp4">
+                                <source src="videos/melding_remote.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading8">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag8" aria-expanded="false" aria-controls="vraag8">
+                                Vraag 8: Lijkt een geschiedenis functie handig/interessant?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag8" class="collapse" aria-labelledby="heading8" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Hiermee bedoelen we natuurlijk geen scenario van "big brother is watching you". Een geschiedenis functie zorgt er natuurlijk voor dat er gezien kan worden wie wat heeft opgezocht op het systeem. Het is namelijk niet de bedoeling dat een operator zo maar allerlei zaken gaat opzoeken die niet relevant zijn. Maar als voordeel zorgt het wel als geheugensteuntje voor wat je zelf in het verleden hebt opgezocht. Als je bv. net iets hebt opgezocht en dit vergeten bent (of je werd gestoord door iemand), kun je dit snel even opzoeken wat je had opgezocht. Dit zou er zo kunnen uitzien: </p>
+                            <video width="75%" height="75%" controls>
+                                <source src="videos/geschiedenis.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
