--- a/index.html
+++ b/index.html
@@ -259,6 +259,36 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading9">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag9" aria-expanded="false" aria-controls="vraag9">
+                                Vraag 9: Zijn er nog bepaalde zaken waar u zelf aan denkt dat u graag hebt met betrekking tot wat u op het beeldscherm ziet?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag9" class="collapse" aria-labelledby="heading9" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog eventuele andere suggesties of wensen kunt vermelden.</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading10">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag10" aria-expanded="false" aria-controls="vraag10">
+                                Vraag 10: Hebt u nog andere opmerking met betrekking tot dit onderwerp?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag10" class="collapse" aria-labelledby="heading10" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een open, optionele vraag waar u nog verduidelijking/opmerkingen kwijt kan.</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
