--- a/index.html
+++ b/index.html
@@ -289,6 +289,31 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading11">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag11" aria-expanded="false" aria-controls="vraag11">
+                                Vraag 11: Hoe groot moet een scherm voor jou ongeveer zijn?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag11" class="collapse" aria-labelledby="heading11" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>De grootte van een scherm wordt vaak gedefinieerd op basis van de diagonaal van het scherm. Dus bv. de lengte van de linkerbovenhoek tot aan de rechteronderhoek. Schermen krijgen ook steeds Engelse eenheden mee, vandaar de eenheid "Inch". Hieronder staan enkele afbeeldingen om de groottes visueel weer te geven: </p>
+                            <p>24 inch (60.96 cm): </p>
+                            <img src="images/scherm_24_inch.png">
+                            <p class="mt-3">27 inch (68.58 cm): </p>
+                            <img src="images/scherm_27_inch.png">
+                            <p class="mt-3">32 inch (81.28 cm): </p>
+                            <img src="images/scherm_32_inch.png">
+                            <p class="mt-3">34 inch (86.36 cm): </p>
+                            <img src="images/scherm_34_inch.png">
+                            <p class="mt-3">49 inch (124.46 cm): </p>
+                            <img src="images/scherm_49_inch.png">
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
