--- a/index.html
+++ b/index.html
@@ -314,6 +314,23 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading12">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag12" aria-expanded="false" aria-controls="vraag12">
+                                Vraag 12: Vind je een 4K scherm noodzakelijk?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag12" class="collapse" aria-labelledby="heading12" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Dit is een vraag die betrekking heeft tot de schermresolutie. Een scherm is opgebouwd uit pixels. Dit zijn allemaal kleine punten op het scherm die allemaal een andere kleur hebben en zo het beeld gaan vormen op je scherm. Hoe lager de resolutie is, hoe minder van deze punten er zijn. Dit zorgt ervoor dat een bepaalde afbeelding gevormd moet gaan worden met veel minder punten, waardoor deze minder scherp zal zijn. Deze schermresolutie wordt altijd weergegeven in het aantal pixels in de breedte en in de hoogte. Een standaard monitor zal 1920*1080 pixels hebben. Dit wordt ook wel "Full HD" genoemd. Een 4K beeldscherm zal 3840*2160 pixels hebben. Pas op: je kan natuurlijk wel een mooi beeldscherm hebben, maar als bv. de camerabeelden niet 4k zijn, zul je weinig nut hebben aan een 4k beeldscherm. In onderstaande afbeelding kun je de verschillen zien tussen full hd en 4k: </p>
+                            <img src="images/full_hd_vs_4k.jpg" height="50%" width="50%">
+                            <img src="images/full_hd_vs_4k_2.jpg" height="50%" width="50%">
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
