--- a/index.html
+++ b/index.html
@@ -331,6 +331,27 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading13">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag13" aria-expanded="false" aria-controls="vraag13">
+                                Vraag 13: Naar welke beeldverhouding gaat je voorkeur uit?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag13" class="collapse" aria-labelledby="heading13" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Deze vraag heeft betrekking tot de beeldverhouding! In het Engels noemen ze dit ook wel eens "aspect ratio". Dit gaat de verhouding weergeven tussen de breedte en de lengte van een beeldscherm. Een normaal scherm gaat vaak een verhouding hebben van 16 inch (40,64 cm) in de lengte en 9 inch (22.86 cm) in de hoogte. Een ultrawide scherm zal vooral breder zijn. Deze heeft een lengte van 21 inch (53.34 cm) en 9 inch (22.86 cm). Een super ultrawide scherm zal het breedste zijn! Deze heeft een lengte van 32 inch (81.28 cm) en een hoogte van 9 inch (22.86 cm). Hieronder een visuele weergave van de 3 verschillende verhoudingen: </p>
+                            <p>Normaal scherm (16:9): </p>
+                            <img src="images/beeldverhouding_16_9.jpg" height="50%" width="50%">
+                            <p class="mt-3">Ultrawide scherm (21:9):</p>
+                            <img src="images/beeldverhouding_21_9.jpg" height="50%" width="50%">
+                            <p class="mt-3">Super Ultrawide scherm (32:9):</p>
+                            <img src="images/beeldverhouding_32_9.jpg" height="50%" width="50%">
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
