--- a/index.html
+++ b/index.html
@@ -352,6 +352,22 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading14">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag14" aria-expanded="false" aria-controls="vraag14">
+                                Vraag 14: Ik vind het belangrijk dat ik een mooi vloeiend beeld heb waarbij er weinig haperingen zijn.
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag14" class="collapse" aria-labelledby="heading14" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Deze vraag heeft betrekking tot de verversingssnelheid. Wanneer je naar je scherm kijkt, dan zie je eigenlijk heel veel bewegende beelden na elkaar. Hoe sneller deze beelden geladen worden na elkaar, hoe vloeiender je de dingen op je scherm ziet. Deze snelheid wordt aangegeven in Hertz. Hoe groter de Hertz is, hoe vloeiender het beeld dus. Als je bv. een ververssnelheid hebt van 60 Hertz, dan zal het beeld 60 keer per seconde ververst worden. Bij een snelheid van 144 Hertz, zal het beeld dan 144 keer per seconden ververst worden. Wanneer dit te laag is, zal het beeld haperig overkomen. Er wordt ook vaak gediscussieerd over het feit dat je vanaf 60 Hertz geen verschil meer kunt waarnemen. Of dit klopt of niet laat ik hier in het midden. Dit is een begrip dat vooral in de gaming wereld van belang is, maar ik wou het toch ook even bevragen! Hieronder een kleine video om dit wat te verduidelijken. Deze gaat over een gsm, maar valt perfect door te trekken naar een gewoon beeldscherm: </p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/-y8KGTZsF6Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
