--- a/index.html
+++ b/index.html
@@ -384,6 +384,22 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading16">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag16" aria-expanded="false" aria-controls="vraag16">
+                                Vraag 16: Heb je graag een scherm met touchscreen?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag16" class="collapse" aria-labelledby="heading16" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Wanneer we spreken met een scherm die een touchscreen functionaliteit heeft, bedoelen we hiermee dat je de computer kunt besturen door het scherm aan te raken. Normaal gezien gebruik je een muis en toetsenbord om op dingen te klikken en te typen. Bij een touchscreen heb je hierbovenop ook de mogelijkheid om al deze handelingen te doen met je vinger door op het scherm te drukken. Pas op: een touchscreen zal geen muis en toetsenbord vervangen! Je hebt nu de mogelijkheid om zowel touchscreen als muis en toetsenbord te gebruiken! Een nadeel hiervan is wel dat een touchscreen vaak niet zo heel erg nauwkeurig is! Hieronder een voorbeeld van dergelijk touchscreen: </p>
+                            <img src="images/touchscreen.jpg" height="50%" width="50%">
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
