--- a/index.html
+++ b/index.html
@@ -400,6 +400,23 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading17">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag17" aria-expanded="false" aria-controls="vraag17">
+                                Vraag 17: Heb je graag een antireflecterend scherm?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag17" class="collapse" aria-labelledby="heading17" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Ken je het gevoel dat je soms op je pc zit te werken of je zit buiten wat te scrollen op je gsm en plots schijnt de zon van achter je schouders op je scherm? Vaak resulteert dit dan dat je niet veel meer kunt zien op je scherm, of je zal erg veel moeite moeten doen hiervoor en de juiste hoek zoeken zodat je toch soms alles nog kunt lezen. Een oplossing hiervoor kan een antireflecterende laag zijn op je scherm. In de technische wereld wordt dit ook wel eens een anti glare genoemd! Deze extra laag op je beeldscherm gaat ervoor zorgen dat reflecties van buitenaf vermeden gaan worden. Ook als de zon dan op je scherm schijnt, ga je nog veel meer op je scherm kunnen aflezen dan met een gewoon scherm! Het nadeel van dit soort scherm is dat de kleuren toch minder tot hun recht gaan komen op dit soort van scherm. Hieronder een voorbeeld: </p>
+                            <img src="images/antireflectie.jpg" height="50%" width="50%">
+                            <p>In deze foto kun je het verschil zien tussen beide soort schermen. Links heb je de antireflectie laag en rechts heb je het gewone, glanzende scherm. De linkerkant ziet er veel doffer uit dan de rechterkant. Dit komt door de laag die hierop is geplakt. De rechterkant voelt daarom helderder aan. Toch zie je ook de reflectie van het toetsenbord in het rechtergedeelte. Dit is om aan te duiden dat je in dit type scherm veel meer belemmeringen kunt zien dan in het antireflectie scherm. Aan de rechterkant zie je dus ook geen reflectie. Beide hebben dus hun voor- en nadelen. Daarom moet je een goede afweging maken.</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
